# www

./: .gitignore  README.md  __init__.py  app.py  apt.sh  blwz.py  build-module.sh  certbot-once.sh  check-src.sh  config-env.sh  config.py  cron-monthly.sh  data.dvc  decorate.py  f11.sh  f12.sh  flask-ssl-up.sh  flask-up.sh  index.html  notify-as-user.sh  package-lock.json  package.json  phinka.py  phinka.sh  pyproject.toml  siab.py  ssl-boot.py  tests.ipynb  tests.sh  tsconfig.json  util.py
.dvc/: config
body/: index.html
config/: editor.desktop  editor.sh  environment.sh  header.html  initialize.sh  make-html.sh  markdown.sh  move-css-js.sh  move-py.sh  server.desktop  tsconfig.json
html/: index.html  python-worker.js
js/client/: python-worker.js
node/: app.js  package-lock.json  package.json
phinka/: CHANGE-LOG.md  README.md  __init__.py  __main__.py  blwz.py  decorate.py  dx.py  mypytypes.py  phinka.py  types.py
static/js/: main.js  python-worker.js
templates/: 404.html  base.html  error.html  html.html  md.html  py.html
tests/: tests.py
wl/: index.wl
