[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phinka"
version = "1.0.1"
authors = [
  { name="Simon Jackson", email="jackokring@gmail.com" },
]
description = "Phinka tools for data processing"
readme = "phinka/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jackokring/www"
"Bug Tracker" = "https://github.com/jackokring/www/issues"