[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phinka"
version = "1.0.2"
authors = [
  { name="Simon Jackson", email="jackokring@gmail.com" },
]
description = "Phinka tools for data processing"
readme = "phinka/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "autograd>=1.5",
  "numpy>=1.23.4"
]

[tool.hatch.build]
include = []
exclude = []
artifacts = []
only-packages = true

[project.urls]
"Homepage" = "https://github.com/jackokring/www"
"Bug Tracker" = "https://github.com/jackokring/www/issues"